--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Build-A-Cell Engineering
-email: data@buildacell.io
+email: engineering@buildacell.io
 description: > # this means to ignore newlines until "baseurl:"
   We're building a cell. Here's the details.
 baseurl: "/engineering" # the subpath of your site, e.g. /blog
