--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Build-A-Cell Engineering
 email: engineering@buildacell.io
 description: > # this means to ignore newlines until "baseurl:"
-  We're building a cell. Here's the details.
+  We're building a cell. Here are the details.
 baseurl: "/engineering" # the subpath of your site, e.g. /blog
 url: "http://buildacell.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: buildacellproj
