--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,9 +16,7 @@
 title: Build-A-Cell Engineering
 email: atg@buildacell.io
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  We're building a cell. Here are the details.
 baseurl: "/engineering" # the subpath of your site, e.g. /blog
 url: "http://buildacell.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: buildacellproj
@@ -33,6 +31,10 @@ exclude:
   - Gemfile
   - Gemfile.lock
 
+# Github settings
+repository: buildacell/engineering
+
+# Prose
 prose:
   ignore: [
     '.sass-cache',
