--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ github_username:  buildacell
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-cayman
 gems:
   - jekyll-feed
 exclude:
